Causal ordering vector clocks implemented